try to fix height of div on mobile bug

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html, body{
 .siteContainer{
     /* background-image: url('./images/meMySelfAndI.jpg'); */
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-size: cover;
     padding: 100px 125px;
     font-family: Arial, Helvetica, sans-serif;
